--- a/yoga_pose_classifier_app.ipynb
+++ b/yoga_pose_classifier_app.ipynb
@@ -1,6 +1,6 @@
 {
   "nbformat": 4,
-  "nbformat_minor": 0,
+  "nbformat_minor": 2,
   "metadata": {
     "colab": {
       "name": "yoga_pose_classifier_app.ipynb",
@@ -534,30 +534,25 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Bookanakere/yoga-pose-classifier/blob/main/yoga_pose_classifier_app.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ],
       "metadata": {
         "id": "view-in-github",
         "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Bookanakere/yoga-pose-classifier/blob/main/yoga_pose_classifier_app.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "SYgpFs5_-454",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bd5f55dd-24f6-4dac-859b-ad5861a3a5d8"
-      },
+      "execution_count": 1,
       "source": [
+        "%%\n",
         "!pip install -Uqq fastbook"
       ],
-      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\u001b[K     |████████████████████████████████| 727kB 12.9MB/s \n",
             "\u001b[K     |████████████████████████████████| 1.2MB 30.4MB/s \n",
@@ -566,16 +561,19 @@
             "\u001b[K     |████████████████████████████████| 61kB 6.8MB/s \n",
             "\u001b[K     |████████████████████████████████| 61kB 7.4MB/s \n",
             "\u001b[?25h"
-          ],
-          "name": "stdout"
+          ]
         }
-      ]
+      ],
+      "metadata": {
+        "id": "SYgpFs5_-454",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bd5f55dd-24f6-4dac-859b-ad5861a3a5d8"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "G0VWlXga7iOx"
-      },
       "source": [
         "Hola!\n",
         "\n",
@@ -586,51 +584,52 @@
         "*At the moment, the model can only identify 'tree', 'wheel' and 'cobra' poses. Any other pose or any other image will not return a sensible answer.* \n",
         "\n",
         "Give it a try and have fun! Cheers!"
-      ]
+      ],
+      "metadata": {
+        "id": "G0VWlXga7iOx"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "D9l6OEBU_QPY"
-      },
+      "execution_count": 3,
       "source": [
         "from fastbook import *\n",
         "from fastai.vision.widgets import *"
       ],
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "D9l6OEBU_QPY"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "XS8AYGoqADoG"
-      },
+      "execution_count": 5,
       "source": [
         "path = Path()\n",
         "inference = load_learner(path/'export_21June.pkl')"
       ],
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "XS8AYGoqADoG"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "WB-Texe-CLvN"
-      },
+      "execution_count": 6,
       "source": [
         "btn_upload = widgets.FileUpload()\n",
         "out_pl = widgets.Output()\n",
         "lbl_pred = widgets.Label()\n",
         "btn_run = widgets.Button(description='Classify')"
       ],
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "WB-Texe-CLvN"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "iinSByb3KY36"
-      },
+      "execution_count": 7,
       "source": [
         "def on_click_classify(change):\n",
         "    img = PILImage.create(btn_upload.data[-1])\n",
@@ -639,22 +638,67 @@
         "    pred,pred_idx,probs = inference.predict(img)\n",
         "    lbl_pred.value = f'Prediction: {pred}; Probability: {probs[pred_idx]:.04f}'"
       ],
-      "execution_count": 7,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "iinSByb3KY36"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "4xIQXSA2Ti57"
-      },
+      "execution_count": 8,
       "source": [
         "btn_run.on_click(on_click_classify)"
       ],
-      "execution_count": 8,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "4xIQXSA2Ti57"
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "source": [
+        "VBox([widgets.Label('upload your pic!'), \n",
+        "      btn_upload, btn_run, out_pl, lbl_pred])"
+      ],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "VBox(children=(Label(value='upload your pic!'), FileUpload(value={}, description='Upload'), Button(description…"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "b677c222d96f47eba27e300ff7f015e2",
+              "version_minor": 0,
+              "version_major": 2
+            }
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": []
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
+            "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
+          ]
+        }
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -680,63 +724,16 @@
         },
         "id": "dkQS3mIsKcBN",
         "outputId": "3ddddfc8-3618-431f-ec8b-55cbaa2d12d5"
-      },
-      "source": [
-        "VBox([widgets.Label('upload your pic!'), \n",
-        "      btn_upload, btn_run, out_pl, lbl_pred])"
-      ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "b677c222d96f47eba27e300ff7f015e2",
-              "version_minor": 0,
-              "version_major": 2
-            },
-            "text/plain": [
-              "VBox(children=(Label(value='upload your pic!'), FileUpload(value={}, description='Upload'), Button(description…"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              ""
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
-            "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "source": [],
+      "outputs": [],
       "metadata": {
         "id": "Qfc6cFdTLeny"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      }
     }
   ]
 }
