--- a/yoga_pose_classifier_app.ipynb
+++ b/yoga_pose_classifier_app.ipynb
@@ -546,8 +546,7 @@
       "cell_type": "code",
       "execution_count": 1,
       "source": [
-        "%%\n",
-        "!pip install -Uqq fastbook"
+        "!pip install -Uqq --no-warn-conflicts fastbook"
       ],
       "outputs": [
         {
